--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 <section class="headPic">
-    <!--Image-->
+    <img src="assets\images\image 2.png" alt="hacker sitting by its computer">
     <p class="examination">Muntlig tenta</p>
     <nav class="btn">
     <button class="onlineBtn">Online challenges</button>
