start with mobile first

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-    <img src="assets\images\Group 1.png" alt="logotype ESC" width="100" height="200"/>
+    <img class="logo" src="assets\images\Group 1.png" alt="logotype ESC" width="128" height="82"/>
     <h1 class="head">Hacker Escape Rooms</h1>
     <nav class="menu">
        <button class="playOne">Play Online</button>
