mobile first header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <body>
 
 <header>
+    <div class="headFlex">
     <img class="logo" src="assets\images\Group 1.png" alt="logotype ESC" width="128" height="82"/>
-    <h1 class="head">Hacker Escape Rooms</h1>
+    <span class="head">Hacker Escape Rooms</span>
+    </div>
     <nav class="menu">
        <button class="playOne">Play Online</button>
        <button class="playTwo">Play on-site</button>
@@ -26,8 +28,7 @@
 </header>
 
 <section class="headPic">
-    <img src="assets\images\image 2.png" alt="hacker sitting by its computer">
-    <p class="examination">Muntlig tenta</p>
+    <img src="assets\images\image 2.png" alt="hacker sitting by its computer" width="1280" height="468">
     <nav class="btn">
     <button class="onlineBtn">Online challenges</button>
     <button class="challengeBtn">On-site challenges</button>
