major css update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <span class="head">Hacker Escape Rooms</span>
     </div>
     <nav class="menu">
-       <button class="playOne">Play Online</button>
+       <button class="playOne">Play online</button>
        <button class="playTwo">Play on-site</button>
        <button class="story">The story</button>
        <button class="contact">Contact us</button>
@@ -31,19 +31,20 @@
     <img src="assets\images\image 2.png" alt="hacker sitting by its computer" width="1280" height="468">
     <nav class="btn">
     <button class="onlineBtn">Online challenges</button>
-    <button class="challengeBtn">On-site challenges</button>
+    <button class="onsiteBtn">On-site challenges</button>
+    <button class="mobileOnline">Online challenges</button>
     </nav>
 </section>
 
 <section class="reviews">
     <div class="reviewOne">
-    <!--Bild-->
+    <img src="assets\images\image 3.png" alt="Portrait of John Doe" class="userImage">
     <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p>
     <p class="name">John Doe, visited us in September 2021</p>
     </div>
     <div class="reviewTwo">
-        <!--Bild-->
-        <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p>
+        <img src="assets\images\image 3.png" alt="Portrait of John Doe">
+        <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p></br></br>
         <p class="name">John Doe, visited us in September 2021</p>
     </div>
 </section>
@@ -94,8 +95,8 @@
 </article>
 
 <nav class="btnTwo">
-    <button class="onlineBtn">Online challenges</button>
-    <button class="challengeBtn">On-site challenges</button>
+    <button class="onlineBtnTwo">Online challenges</button>
+    <button class="onsiteBtnTwo">On-site challenges</button>
 </nav>
 
 <section class="about">
