--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 <section class="reviews">
     <div class="reviewOne">
     <img src="assets\images\image 3.png" alt="Portrait of John Doe" class="userImage">
-    <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p>
+    <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p></br>
     <p class="name">John Doe, visited us in September 2021</p>
     </div>
     <div class="reviewTwo">
         <img src="assets\images\image 3.png" alt="Portrait of John Doe">
-        <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p></br></br>
+        <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p></br>
         <p class="name">John Doe, visited us in September 2021</p>
     </div>
 </section>
