review fields css

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 
 <section class="reviews">
     <div class="reviewOne">
-    <img src="assets\images\image 3.png" alt="Portrait of John Doe" class="userImage">
-    <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p></br>
+    <img src="assets\images\image 3.png" alt="Portrait of John Doe" width="96" height="96" class="userImg">
+    <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p>
     <p class="name">John Doe, visited us in September 2021</p>
     </div>
     <div class="reviewTwo">
-        <img src="assets\images\image 3.png" alt="Portrait of John Doe">
-        <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p></br>
+        <img src="assets\images\image 3.png" alt="Portrait of John Doe" width="96" height="96" class="userImg">
+        <p>This is a quote about how amazing this place is and how much fun me and my friends had when we tried it</p>
         <p class="name">John Doe, visited us in September 2021</p>
     </div>
 </section>
