changes mobile first buttons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <button class="onlineBtn">Online challenges</button>
     <button class="onsiteBtn">On-site challenges</button>
     <button class="mobileOnline">Online challenges</button>
+    <button class="mobileOnsite">On-site challenges</button>
     </nav>
 </section>
 
