--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
     </section>
 
     <article class="booking">
-        <!--bild-->
-        <h3>Play with your friends or build your team stronger at work</h3>
-        <figcaption>
+        <img src="assets\images\nesa-by-makers-IgUR1iX0mqM-unsplash 1.png" width="640" height="440" class="bookingImg">
+        <p class="bookingHead">Play with your friends or build your team stronger at work</p>
+        <p class="bookingText">
             Praeterea, ex culpa non invenies unum aut non accusatis unum.
             Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-        </figcaption>
+        </p>
         <button class="bookingBtn">Book on-site today</button>
     </article>
 
     <article class="challenges">
-        <!--bild-->
-        <h3>Play online or visit our venue for one of our 25 escape rooms</h3>
-        <figcaption>
+        <img src="assets\images\kelly-sikkema-YK0HPwWDJ1I-unsplash 1.png" width="640" height="440" class="challengesImg">
+        <p class="challengesHead">Play online or visit our venue for one of our 25 escape rooms</p>
+        <p class="challengesText">
             Praeterea, ex culpa non invenies unum aut non accusatis unum.
             Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-        </figcaption>
+        </p>
         <button class="challengesBtn">See all challenges</button>
     </article>
 
