--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="headFlex">
             <img class="logo" src="assets\images\Group 1.png" alt="logotype ESC" width="128" height="82" />
-            <span class="head">Hacker Escape Rooms</span>
+            <span class="head">Hacker Escape Rooms</span> <!--ändra till h1-->
         </div>
         <nav class="menu">
             <button class="playOne">Play online</button>
@@ -74,8 +74,8 @@
                     <img src="assets\images\Star 5.svg" width="23" height="26">
                 </div>
                 <p class="participants">2-6 participants</p>
-                <p class="roomInfo">Praeterea, ex culpa non invenies unum aut non accusatis </br>unum.
-                    Et nihil inuitam. Nemo nocere tibi erit, </br>et non inimicos, et
+                <p class="roomInfo">Praeterea, ex culpa non invenies unum</br> aut non accusatis unum.
+                    Et nihil inuitam.</br> Nemo nocere tibi erit, et non inimicos, et
                 </p>
                 <button class="book">Book this room</button>
             </div>
@@ -94,8 +94,8 @@
                     <img src="assets\images\Star 5.svg" width="23" height="26">
                 </div>
                 <p class="participants">2-6 participants</p>
-                <p class="roomInfo">Praeterea, ex culpa non invenies unum aut non accusatis</br> unum.
-                    Et nihil inuitam. Nemo nocere tibi erit,</br> et non inimicos, et
+                <p class="roomInfo">Praeterea, ex culpa non invenies unum</br> aut non accusatis unum.
+                    Et nihil inuitam.</br> Nemo nocere tibi erit, et non inimicos, et
                 </p>
                 <button class="book">Book this room</button>
             </div>
@@ -114,8 +114,8 @@
                     <img src="assets\images\Star 5.svg" width="23" height="26">
                 </div>
                 <p class="participants">2-6 participants</p>
-                <p class="roomInfo">Praeterea, ex culpa non invenies unum aut non accusatis</br> unum.
-                    Et nihil inuitam. Nemo nocere tibi erit,</br> et non inimicos, et
+                <p class="roomInfo">Praeterea, ex culpa non invenies unum</br> aut non accusatis unum.
+                    Et nihil inuitam.</br> Nemo nocere tibi erit, et non inimicos, et
                 </p>
                 <button class="book">Book this room</button>
             </div>
@@ -126,7 +126,6 @@
         <li><button class="onlineBtnTwo">Online challenges</button></li>
         <li><button class="onsiteBtnTwo">On-site challenges</button></li>
         <li><button class="mobileOnlineTwo">Online challenges</button></li>
-
     </ul>
 
     <section class="about">
@@ -157,14 +156,15 @@
     </article>
 
     <footer>
-        <h4>[Esc] Hacker Escape Rooms</h4>
-        <p>Quodsi haberent magnalia inter potentiam et divitias,
+        <div class="footerAbout">
+        <h4 class="footerHead">[Esc] Hacker Escape Rooms</h4>
+        <p class="footerText">Quodsi haberent magnalia inter potentiam et divitias,
             et non illam quidem haec eo spectant haec quoque vos
             omnino desit illud quo solo felicitatis libertatisque perficiuntur.</p>
-
+         </div>   
         <nav class="siteMap">
-            <h4>Site Map</h4>
-            <ul>
+            <h4 class="siteMapHead">Site Map</h4>
+            <ul class="siteList">
                 <li>The Story</li>
                 <li>Contact Us</li>
                 <li>Legal</li>
@@ -173,13 +173,14 @@
             </ul>
         </nav>
         <nav class="socials">
-            <h4>Follow us on</h4>
-            <ul>
+            <h4 class="socialHead">Follow us on</h4>
+            <ul class="socialList">
                 <li>Facebook</li>
                 <li>Instagram</li>
                 <li>Twitter</li>
             </ul>
         </nav>
+        
     </footer>
 </body>
 
