--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="headFlex">
             <img class="logo" src="assets\images\Group 1.png" alt="logotype ESC" width="128" height="82" />
-            <span class="head">Hacker Escape Rooms</span> <!--ändra till h1-->
+            <h1 class="head">Hacker Escape Rooms</h1> <!--ändra till h1-->
         </div>
         <nav class="menu">
             <button class="playOne">Play online</button>
@@ -57,6 +57,7 @@
             <p class="name">John Doe, visited us in September 2021</p>
         </div>
     </section>
+
     <div class="popular">
         <h2>Popular challenges right now</h2>
     </div>
@@ -80,9 +81,7 @@
                 <button class="book">Book this room</button>
             </div>
         </div>
-
         <div class="cardTwo">
-
             <img src="assets\images\image 5.png" width="800" height="500" class="imageCard">
             <div class="container">
                 <h3 class="roomTitle">Title of room (on-site)</h3>
@@ -100,9 +99,7 @@
                 <button class="book">Book this room</button>
             </div>
         </div>
-
         <div class="cardThree">
-
             <img src="assets\images\image 5.png" width="800" height="500" class="imageCard">
             <div class="container">
                 <h3 class="roomTitle">Title of room (on-site)</h3>
@@ -146,7 +143,8 @@
     </article>
 
     <article class="challenges">
-        <img src="assets\images\kelly-sikkema-YK0HPwWDJ1I-unsplash 1.png" width="640" height="440" class="challengesImg">
+        <img src="assets\images\kelly-sikkema-YK0HPwWDJ1I-unsplash 1.png" width="640" height="440"
+            class="challengesImg">
         <p class="challengesHead">Play online or visit our venue for one of our 25 escape rooms</p>
         <p class="challengesText">
             Praeterea, ex culpa non invenies unum aut non accusatis unum.
@@ -157,11 +155,11 @@
 
     <footer>
         <div class="footerAbout">
-        <h4 class="footerHead">[Esc] Hacker Escape Rooms</h4>
-        <p class="footerText">Quodsi haberent magnalia inter potentiam et divitias,
-            et non illam quidem haec eo spectant haec quoque vos
-            omnino desit illud quo solo felicitatis libertatisque perficiuntur.</p>
-         </div>   
+            <h4 class="footerHead">[Esc] Hacker Escape Rooms</h4>
+            <p class="footerText">Quodsi haberent magnalia inter potentiam et divitias,
+                et non illam quidem haec eo spectant haec quoque vos
+                omnino desit illud quo solo felicitatis libertatisque perficiuntur.</p>
+        </div>
         <nav class="siteMap">
             <h4 class="siteMapHead">Site Map</h4>
             <ul class="siteList">
@@ -180,7 +178,6 @@
                 <li>Twitter</li>
             </ul>
         </nav>
-        
     </footer>
 </body>
 
