--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="headFlex">
             <img class="logo" src="assets\images\Group 1.png" alt="logotype ESC" width="128" height="82" />
-            <h1 class="head">Hacker Escape Rooms</h1> <!--ändra till h1-->
+            <h1 class="head">Hacker Escape Rooms</h1>
         </div>
         <nav class="menu">
             <button class="playOne">Play online</button>
@@ -38,7 +38,7 @@
                 <li><button class="onlineBtn">Online challenges</button></li>
                 <li><button class="onsiteBtn">On-site challenges</button></li>
                 <li><button class="mobileOnline">Online challenges</button></li>
-                <!--<button class="mobileOnsite">On-site challenges</button>-->
+                
             </ul>
         </nav>
     </section>
